--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <a target="_blank" href="https://www.youtube.com/watch?v=6AStdL1OXSA" type="button" class="btn btn-danger"> Ver Video</a>
+            <a target="_blank" href="https://www.youtube.com/watch?v=E1ZAIZGEMK8" type="button" class="btn btn-danger"> Ver Video</a>
             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
         
         </div>
