--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-md-6">
                 <div class="row align-items-center">
                         <div class="contenedor">
-                            <h3 class="text-center"><strong>Desarrollado con cariño para ti ❤ Brigith ❤</strong>|</span></h3>
+                            <h3 class="text-center"><strong>Desarrollado con cariño para ti ❤ Ebelin ❤</strong>|</span></h3>
                         </div>
                         
                 </div>  
@@ -80,7 +80,7 @@
     <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header bg-danger ">
-        <h5 class="modal-title text-light text-center" id="exampleModalLabel">Sabia que ingresaría 🙈❤ </h5>
+        <h5 class="modal-title text-light text-center" id="exampleModalLabel">Sabia que ingresarías 🙈❤ </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body ">
