--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container-fluid ">
             <div class="row align-items-center p-2">
-                <h2 class="text-center text-light p-2 bg-danger"><strong>Lo mejor que me ha pasado eres tú !!</strong> </h2>
+                <h2 class="text-center text-light p-2 bg-danger"><strong>🥰🙈 Te Quiero 🙈🥰</strong> </h2>
             </div> 
     </div>
     <div class="container-fluid d-flex ">
